[package]
name = "lazer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.12"
csv = "1.3.0"
eframe = "0.26.2"
egui = "0.26.2"
egui-notify = "0.13.0"
egui_extras = { version = "0.26.2", features = ["image"] }
egui_plot = "0.26.2"
futures = "0.3.30"
rfd = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["codec"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
